# mpv-winbuild

./: CMakeLists.txt  README.md  build.sh  cargo_config.in  ccache_conf.in  exec.in  llvm-compiler.in  llvm-ld.in  llvm-mingw-wrapper.cmake  meson_cross.txt.in  toolchain.cmake.in  version
.github/workflows/: clean.yml  llvm.yml  mpv.yml  toolchain.yml
action/build_toolchain/: action.yml
cmake/: custom_steps.cmake  download_externalproject.cmake  packages_check.cmake
patch/: 0000-patch.patch  0001-CMakeLists-check-mimalloc-on-fedora.patch  0001-toolchain-add-llvm-mingw-wrapper.patch
